--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,3 +100,14 @@ footer{
 #btnToTop:hover {
     background-color: #555;
 }
+
+textarea{
+    resize: none;
+}
+
+#map {
+    border: 8px solid white;
+    width:100%;
+    height:300px;
+    margin-bottom: 50px;
+}
